manifests/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow-notebook-ci
spec:
  gateways:
    - container-registry/container-registry-ingressgateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: kubeflow-notebook-ci.default.svc.cluster.local
            port:
              number: 80
      match:
        - uri:
            prefix: /notebook-ci/
      rewrite:
        uri: /
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: kubeflow-notebook-ci-gateway
# spec:
#   selector:
#     istio: ingressgateway # use istio default controller
#   servers:
#     - port:
#         number: 80
#         name: http
#         protocol: HTTP
#       hosts:
#         - "*"
